@@ -33,7 +33,7 @@
 #define and_eq &=
 #define bitand &
 #define bitor |
-#define complement ~
+#define compl ~
 #define not !
 #define not_eq !=
 #define or ||
